--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "prisma": "^2.30.0"
   },
   "devDependencies": {
-    "prisma": "^2.30.0",
     "ts-node": "^10.2.1"
   }
 }
